force-app/main/default/objects/Lead/fields/What_is_your_average_spend_per_unit__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_average_spend_per_unit__c</fullName>
    <description>Enter the average spend per unit</description>
    <inlineHelpText>Enter the average spend per unit</inlineHelpText>
    <label>What is your average spend per unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$500-$1000</fullName>
            </value>
            <value>
                <fullName>$1001-$2500</fullName>
            </value>
            <value>
                <fullName>$2501-$5000</fullName>
            </value>
            <value>
                <fullName>$5001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>