force-app/main/default/objects/Lead/fields/Where_did_the_customer_contact_you__c.field-meta.xml
<CustomField>
    <fullName>Where_did_the_customer_contact_you__c</fullName>
    <description>This field is used to identify external lead sources for commercial business.</description>
    <inlineHelpText>Select Augusta if a customer is calling into Augusta Center.  Select Full Line Stores, if the form is being filled at a retail store.</inlineHelpText>
    <label>Where did the customer contact you?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Augusta</fullName>
            </value>
            <value>
                <fullName>Full Line Stores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>