force-app/main/default/objects/Lead/fields/Where_do_you_buy_the_products__c.field-meta.xml
<CustomField>
    <fullName>Where_do_you_buy_the_products__c</fullName>
    <label>Where do you buy the products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct from manufacturer (e.g. GE, Whirlpool etc.)</fullName>
            </value>
            <value>
                <fullName>Local big box retailer (e.g. Home Depot, Lowes etc.)</fullName>
            </value>
            <value>
                <fullName>Appliance Specialty Distributors/Stores (e.g. Abt, HH Gregg, Ferguson etc.)</fullName>
            </value>
            <value>
                <fullName>Local merchant</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>