force-app/main/default/objects/Lead/recordTypes/SearsCommercial_com.recordType-meta.xml
<RecordType>
    <fullName>SearsCommercial_com</fullName>
    <active>true</active>
    <businessProcess>Master Lead Process</businessProcess>
    <label>SearsCommercial.com</label>
</RecordType>