force-app/main/default/objects/Lead/validationRules/Address_Required_for_Qualified_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Required_for_Qualified_Leads</fullName>
    <active>true</active>
    <description>Address is required for leads with a Lead Status of Sales Qualified.</description>
    <errorConditionFormula>AND( 
IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE), 
ISPICKVAL(Status, &quot;Sales Qualified Lead&quot;), 
OR(
( Street = &quot;&quot;),
( City = &quot;&quot;),
( State = &quot;&quot;),
( PostalCode = &quot;&quot;),
( Country = &quot;&quot;)
)
)</errorConditionFormula>
    <errorMessage>Address is required if the Lead Status is Sales Qualified</errorMessage>
</ValidationRule>