force-app/main/default/objects/Lead/validationRules/Country_must_be_US.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_must_be_US</fullName>
    <active>false</active>
    <description>Lead country must be US</description>
    <errorConditionFormula>AND(

IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
OR(
LEN(Country) = 1,
NOT(
CONTAINS(
&quot;US&quot;,
Country))
)
)</errorConditionFormula>
    <errorMessage>Country must be &quot;US&quot;</errorMessage>
</ValidationRule>