force-app/main/default/objects/Lead/validationRules/Lead_Status_for_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_for_Conversion</fullName>
    <active>true</active>
    <description>Lead Status must be Sales Qualified prior to conversion (except for duplicate leads).</description>
    <errorConditionFormula>AND( 
IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
IsConverted, 
NOT( TEXT(Status) = &quot;Sales Qualified Lead&quot;),
NOT( TEXT(Status) = &quot;Existing&quot;))</errorConditionFormula>
    <errorMessage>Lead Status must be Sales Qualified for conversion.</errorMessage>
</ValidationRule>