force-app/main/default/objects/Lead/validationRules/Opportunity_Type_Required_for_SQL.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Type_Required_for_SQL</fullName>
    <active>true</active>
    <description>Opportunity Type is required for Sales Qualified Leads</description>
    <errorConditionFormula>AND(
IF(ISCHANGED(Automation_Control__c), 
IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE), 
ISPICKVAL(Status, &quot;Sales Qualified Lead&quot;), 
ISPICKVAL(Opportunity_Type__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Opportunity Type is required for Sales Qualified Leads</errorMessage>
</ValidationRule>