force-app/main/default/objects/Lead/validationRules/Qualification_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualification_Criteria</fullName>
    <active>true</active>
    <description>If &quot;Lead Status&quot; is &quot;Sales Qualified,&quot; the qualification criteria fields are required</description>
    <errorConditionFormula>AND( ISPICKVAL(Status, &quot;Sales Qualified Lead&quot;), 
IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),  FALSE,TRUE),TRUE),
OR(
( ISPICKVAL(Do_we_understand_the_customer_s_buying_p__c, &quot;&quot;)),
( ISPICKVAL(Speaking_with_someone_with_influence__c, &quot;&quot;)),
( ISPICKVAL(Clear_interest_in_the_next_step__c, &quot;&quot;)),
( ISPICKVAL(Are_there_clear_red_flags__c, &quot;&quot;)),
( ISBLANK(Qualification_Debrief__c))
)
)</errorConditionFormula>
    <errorMessage>Complete Qualification Criteria fields for Sales Qualified Leads</errorMessage>
</ValidationRule>