force-app/main/default/objects/Lead/validationRules/Reason_why_Lead_is_Disqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_why_Lead_is_Disqualified</fullName>
    <active>true</active>
    <description>If Lead Status = Disqualified, the Reason Disqualified is required.</description>
    <errorConditionFormula>AND(
IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
ISPICKVAL(  Status , &quot;Disqualified&quot;),
TEXT( Reason_Disqualified__c ) = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Reason_Disqualified__c</errorDisplayField>
    <errorMessage>If Lead Status = Disqualified, then Reason Disqualified is required.</errorMessage>
</ValidationRule>