force-app/main/default/objects/Lead/validationRules/Require_Email_or_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_or_Phone</fullName>
    <active>true</active>
    <description>Email or phone is required at lead creation</description>
    <errorConditionFormula>AND(
IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
ISBLANK( Phone ),
ISBLANK( Email )
)</errorConditionFormula>
    <errorMessage>Enter the lead&#39;s email or phone number</errorMessage>
</ValidationRule>