force-app/main/default/objects/Lead/listViews/All_Leads_Open.listView-meta.xml
<ListView>
    <fullName>All_Leads_Open</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>SCOPES_ID__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Sector__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Recycled</value>
    </filters>
    <label>4 All Leads - Open</label>
</ListView>