force-app/main/default/objects/Lead/listViews/Archived_Accounts.listView-meta.xml
<ListView>
    <fullName>Archived_Accounts</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>SAP_ID__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Archived Account</value>
    </filters>
    <label>Archived Accounts</label>
</ListView>