force-app/main/default/objects/Lead/listViews/Augusta_Support_Center.listView-meta.xml
<ListView>
    <fullName>Augusta_Support_Center</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Sector__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Store_Associate_Name__c</columns>
    <columns>Augusta_Associate_Name__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <label>Augusta Support Center</label>
    <queue>AugustaSupportCenter</queue>
    <sharedTo>
        <role>Commercial_Support</role>
        <role>Sears_Commercial_Executive</role>
        <role>Sears_Commercial_Leadership</role>
    </sharedTo>
</ListView>