force-app/main/default/objects/Lead/listViews/CAS_250_Daily_Lead_Allotment.listView-meta.xml
<ListView>
    <fullName>CAS_250_Daily_Lead_Allotment</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATE</columns>
    <columns>pi__score__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Marketing Qualified Lead</value>
    </filters>
    <label>IST-AR leads week of 09/25/2017</label>
    <sharedTo>
        <roleAndSubordinates>Inside_Sales_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>