force-app/main/default/objects/Lead/listViews/CAS_Campaign.listView-meta.xml
<ListView>
    <fullName>CAS_Campaign</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Campaign_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Recycled,Existing,Disqualified</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Inside Sales Team</value>
    </filters>
    <label>CAS Campaign</label>
    <sharedTo>
        <roleAndSubordinates>Inside_Sales_Customer_Acquisition_Specialist</roleAndSubordinates>
    </sharedTo>
</ListView>