force-app/main/default/objects/Lead/listViews/CAS_NAA_Leads.listView-meta.xml
<ListView>
    <fullName>CAS_NAA_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Queue</filterScope>
    <label>CAS NAA Leads</label>
    <queue>Inside_Sales_Team</queue>
    <sharedTo>
        <role>Inside_Sales_Customer_Acquisition_Specialist</role>
    </sharedTo>
</ListView>