force-app/main/default/objects/Lead/listViews/CAS_Website_Leads.listView-meta.xml
<ListView>
    <fullName>CAS_Website_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Recycled,Existing,Disqualified</value>
    </filters>
    <label>CAS Website Leads</label>
    <queue>Inside_Sales_Team</queue>
    <sharedTo>
        <role>Inside_Sales_Customer_Acquisition_Specialist</role>
    </sharedTo>
</ListView>