force-app/main/default/objects/Lead/listViews/Customer_Success_Specialist_Lead.listView-meta.xml
<ListView>
    <fullName>Customer_Success_Specialist_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Success Specialist</label>
    <queue>Customer_Success_Specialist</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>