force-app/main/default/objects/Lead/listViews/Dallas_District.listView-meta.xml
<ListView>
    <fullName>Dallas_District</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>SCOPES_ID__c</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Sector__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Products_Services__c</columns>
    <columns>Programs__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <label>North Texas District</label>
    <queue>NorthTexasDistrict</queue>
    <sharedTo>
        <role>Sears_Commercial_Executive</role>
        <role>Sears_Commercial_Leadership</role>
    </sharedTo>
</ListView>