force-app/main/default/objects/Lead/listViews/IST_AR_Leads_Week_of_01_02_2018.listView-meta.xml
<ListView>
    <fullName>IST_AR_Leads_Week_of_01_02_2018</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Marketing Qualified Lead</value>
    </filters>
    <label>IST-AR Leads Week of 01/02/2018</label>
</ListView>